examples/simple/undefined/UB-EFNC1-bad.output
Error: UB-EFNC1
Description: attempt to call the function f through a pointer with incompatible type.
Type: Undefined behavior.
See also: C11 sec. 6.5.2.2:9, J.2:1 item 41
  at main(UB-EFNC1-bad.c:7)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
